# hello-app

./: .env.example  .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
.claude/: settings.json
.claude/commands/: bug.md  build_terraform_ami.md  chore.md  classify_asw_app.md  classify_asw_io.md  classify_issue.md  commit.md  deploy_dev_full.md  document.md  feature-commented.md  feature.md  fix_health_check.md  generate_branch_name.md  health_check.md  implement.md  install-hil.md  install.md  install_worktree.md  ipe_bug.md  ipe_build.md  ipe_chore.md  ipe_commit.md  ipe_feature.md  ipe_module.md  ipe_pull_request.md  ipe_review.md  ipe_status.md  maintenance.md  test.md  (+15 more)
ai_docs/: README.md
app/: README.md  index.html  server.py
app_docs/: .gitkeep  EXAMPLE-feature-template.md  README.md  agentic_kpis.md  agentic_kpis_summary.md
asw/: README.md
ipe/: README.md  generate_remaining_files.py  generate_triggers_tests.py
scripts/: check_ipe_adw_ports.sh  generate_architecture_diagrams.sh  manage-ami.sh  manual-build-and-deploy.sh  monitor_workflow_health.sh  notify.sh  regenerate_kpi_summary.py  setup-template.sh  simple_notify.sh  start_webhook_with_logging.sh  tts_notify.py  voice_to_claude_code.py
shared/: git_ops.py  github.py  state.py  utils.py  watch_issue.py  workflow_base.py
specs/: README.md  plan-combine-adws-ipe-into-unified-asw-workflow.md  plan-move-terraform-packer-to-io-directory.md  plan-rename-adws-expert-to-asw-expert-skill.md
triggers/: README.md  __init__.py  test_unified_webhook.py  test_webhook_manually.sh  trigger_webhook.py
(+245 files in other folders)
